--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
   },
   "dependencies": {
     "prettier": "^2.7.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   }
 }
